<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Search</string>
    <string name="app_name">Car Alert</string>
    <string name="reg_no">REG NO</string>
    <string name="car_maker">Maker</string>
    <string name="car_color">COLOR</string>
    <string name="back">Back</string>
    <string name="Desc">Desc</string>
    <string name="settings_shortcut">Settings</string>
    <string name="settings_label">Settings</string>
    <string name="dail">Dial Police</string>
    <string name="refresh_shortcut">Refresh</string>
    <string name="refresh_label">Refresh</string>
</resources>