<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Registration Number"
        android:gravity="center" />

    <TextView
        android:id="@+id/textViewRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_no"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:gravity="center"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Color of the Car" 
        android:gravity="center" />

    <TextView
        android:id="@+id/textViewColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/car_color"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Make Of the car" 
        android:gravity="center"/>

    <TextView
        android:id="@+id/textViewMaker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/car_maker"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Car Description" 
        android:gravity="center"/>

    <TextView
        android:id="@+id/textViewDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Desc"
        android:textAppearance="?android:attr/textAppearanceLarge" />
<Button
        android:id="@+id/buttonCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dail" />
    <Button
        android:id="@+id/buttonBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back" />
	
</LinearLayout>